fixed dark mode for pin conversation

--- a/src/ChatListPage2.css
+++ b/src/ChatListPage2.css
@@ -30,3 +30,9 @@
   color: white !important; 
 
 }
+
+
+.dark-theme .ui.toggle.checkbox label{
+  color: white !important; 
+
+}
